app/static/css/style.less
// Core variables and mixins
@import "../components/bootstrap/less/variables.less";
@import "../components/bootstrap/less/mixins.less";

// Reset
@import "../components/bootstrap/less/normalize.less";
@import "../components/bootstrap/less/print.less";

// Core CSS
@import "../components/bootstrap/less/scaffolding.less";
@import "../components/bootstrap/less/type.less";
@import "../components/bootstrap/less/code.less";
@import "../components/bootstrap/less/grid.less";
@import "../components/bootstrap/less/tables.less";
@import "../components/bootstrap/less/forms.less";
@import "../components/bootstrap/less/buttons.less";

// Components
//@import "../components/bootstrap/less/component-animations.less";
//@import "../components/bootstrap/less/glyphicons.less";
@import "../components/bootstrap/less/dropdowns.less";
@import "../components/bootstrap/less/button-groups.less";
@import "../components/bootstrap/less/input-groups.less";
@import "../components/bootstrap/less/navs.less";
@import "../components/bootstrap/less/navbar.less";
//@import "../components/bootstrap/less/breadcrumbs.less";
//@import "../components/bootstrap/less/pagination.less";
//@import "../components/bootstrap/less/pager.less";
//@import "../components/bootstrap/less/labels.less";
//@import "../components/bootstrap/less/badges.less";
//@import "../components/bootstrap/less/jumbotron.less";
//@import "../components/bootstrap/less/thumbnails.less";
@import "../components/bootstrap/less/alerts.less";
@import "../components/bootstrap/less/progress-bars.less";
//@import "../components/bootstrap/less/media.less";
//@import "../components/bootstrap/less/list-group.less";
//@import "../components/bootstrap/less/panels.less";
//@import "../components/bootstrap/less/wells.less";
@import "../components/bootstrap/less/close.less";

// Components w/ JavaScript
@import "../components/bootstrap/less/modals.less";
//@import "../components/bootstrap/less/tooltip.less";
//@import "../components/bootstrap/less/popovers.less";
//@import "../components/bootstrap/less/carousel.less";

// Utility classes
@import "../components/bootstrap/less/utilities.less";
@import "../components/bootstrap/less/responsive-utilities.less";

// Font Awesome
@import "../components/font-awesome/less/variables";
@import "../components/font-awesome/less/mixins";
@import "../components/font-awesome/less/path";
@import "../components/font-awesome/less/core";
//@import "../components/font-awesome/less/larger";
//@import "../components/font-awesome/less/fixed-width";
//@import "../components/font-awesome/less/list";
//@import "../components/font-awesome/less/bordered-pulled";
@import "../components/font-awesome/less/spinning";
//@import "../components/font-awesome/less/rotated-flipped";
//@import "../components/font-awesome/less/stacked";
@import "../components/font-awesome/less/icons";
@fa-font-path: "../components/font-awesome/fonts/";

// Variables
@gallery-heading-bg: #fff;

/** Layout **/
.container {
    margin: 0;
    width: 100%;
}

.navbar {
    margin-bottom: 10px;
}

.navbar-nav .fa {
    padding-right: 10px;
}

/** Gallery Date **/
.gallery-date {
    text-align: center;
}

.gallery-date-line {
    border-top: 3px solid #eee;
    margin: 15px 0px;
}

.gallery-date-text {
    display: block;
    margin-top: -25px;
}

.gallery-date-text-bg {
    background-color: white;
    padding: 0px 10px;
}

/** Gallery **/
.gallery {
    border-bottom: 1px solid #eee;
    padding-bottom: 15px;
}

.gallery-heading {
    color: #222;
    font-size: 22px;
    margin-top: 15px;
}

.gallery-heading-date {
    font-size: 12px;
    color: #bbb;
    padding-left: 10px;
}

.gallery-heading-buttons {
    font-size: 14px;
    margin-left: 15px;
}

.gallery-photo {
    border-bottom: 1px solid white;
    border-right: 1px solid white;
    display: inline-block;
}

.gallery-photo-manage-dropdown {
    position: absolute;
    margin: 3px;
}

/** Lightbox **/

.lightbox {
    .user-select(none);
    background: rgba(0, 0, 0, .75);
    cursor: pointer;
    display: block;
    height: 100%;
    left: 0;
    position: fixed;
    text-align: center;
    top: 0;
    width: 100%;
    z-index: 1099;
}

.lightbox-buttons {
    position: absolute;
    right: 55px;
    top: 5px;

    .btn {
        display: block;
        float: right;
        margin-right: 5px;

        .fa {
            padding-right: 5px;
        }
    }
}

.lightbox-spinner {
    color: #888;
    font-size: 50px;
    height: 100%;
    position: absolute;
    width: 100%;
}

.lightbox-photo {
    display: inline-block;
    height: auto;
    max-height: 100%;
    max-width: 100%;
    vertical-align: middle;
    width: auto;
}

.lightbox-nav {
    color: white;
    display: block;
    position: absolute;
    top: 0;
    width: 50px;
}

.lightbox-nav-left {
    border-right: 1px solid #999;
    left: 0;
}

.lightbox-nav-right {
    border-left: 1px solid #999;
    right: 0;
}

